Refactored deprecated use of new URL(url) to URI.create method